selfhost/test/parser/for_error_no_iterator.out
Error at %FILE_NAME%:1:14
Unexpected token 'val':
  |  for s in { } val a = 1
                  ^