selfhost/test/parser/for_error_no_iterator.abra
for s in { } val a = 1
